@@ -31,6 +31,8 @@ the future, the admin web ui + guard).
 * Updated the configuration docs.
 * Added the docstrings in the admin.auth module.
 * Ensured that proxies services set a unique name.
+* Updated the convenience functions in application.service to use index-based
+names.
 
 2008.06.27 oubiwann
 
